# ticker

./: Cargo.toml  README.md
scripts/: finhub.http
src/: config.rs  finance.rs  main.rs
