[package]
name = "ticker"
version = "0.1.0"
authors = ["karl <karl.statz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { git = "https://github.com/gyscos/cursive" }
yaml-rust = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }